--- a/index.html
+++ b/index.html
@@ -15,42 +15,53 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-      <a class="navbar-brand" href="./index.html">Amazon</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./backoffice.html">Backoffice</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <a class="navbar-brand" href="./index.html">Amazon</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./backoffice.html">Backoffice</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
     <div class="container text-center">
       <h1>List of Amazon products</h1>
       <h2 class="my-5">Products</h2>
-      <div class="col-md-6 offset-md-3">
-        <!-- <div id="currentEvents"></div> -->
-        <ul class="list-group list-group-flush" id="currentEvents"></ul>
-      </div>
+
+      <!-- <div id="currentEvents"></div> -->
+      <!-- <ul class="list-group list-group-flush" id="currentEvents"></ul> -->
+      <div
+        class="row mt-3 row-cols-sm-2 row-cols-md-3 row-cols-lg-4"
+        id="currentEvents"
+      ></div>
     </div>
 
     <script>
@@ -70,13 +81,24 @@
 
           if (events.length > 0) {
             events.forEach((e) => {
-              let listItem = document.createElement("li");
-              listItem.classList.add(
-                "list-group-item",
-                "d-flex",
-                "justify-content-between"
-              );
-              listItem.innerHTML = `<span>${e.name}</span><span>${e.price}$</span>`;
+              //    let listItem = document.querySelector(".cards-container");
+              let listItem = document.createElement("card");
+              listItem.classList.add();
+              listItem.innerHTML = `
+                                      <div class="col my-3">
+                                     <div class="card">
+                                    <img src="${e.imageUrl}" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                      <h5 class="card-title">${e.name}</h5>
+                                      <h5 class="card-title">${e.brand}</h5>
+                                      <p class="card-text"> <b>Description:</b> <br> <small>${e.description}</small></p>
+                                      <p class="card-text"> <b>Price:</b> ${e.price}$</p>
+                                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Read more</a>
+                                    
+
+                                    </div>
+                              </div>
+                                  </div>`;
               currentEvents.appendChild(listItem);
             });
           } else {
