delete button is working

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                       <h5 class="card-title">${e.brand}</h5>
                                       <p class="card-text"> <b>Description:</b> <br> <small>${e.description}</small></p>
                                       <p class="card-text"> <b>Price:</b> ${e.price}$</p>
-                                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Read more</a>
+                                      <a href="detail.html?id=${e._id}" class="btn btn-primary">Read more</a>
                                     
 
                                     </div>
